Console.WriteLine("Modified") Updated

--- a/NZWalksAPI/appsettings.json
+++ b/NZWalksAPI/appsettings.json
@@ -7,6 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "NZWalksConnectionString": "Server=DESKTOP-K9ME3H4;Database=NZWalksDb;Trusted_Connection=True; TrustServerCertificate=True"
+    "NZWalksConnectionString": "Server=DESKTOP-K9ME3H4;Database=NZWalksDb;Trusted_Connection=True;TrustServerCertificate=True",
+    "NZWalksAuthConnectionString": "Server=DESKTOP-K9ME3H4;Database=NZWalksAuthDb;Trusted_Connection=True; TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "ThisIsASuperSecretKeyForJwtDontShare12345!",
+    "Issuer": "https://localhost:7259",
+    "Audience": "https://localhost:7259"
   }
 }
